@@ -9,7 +9,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2775</build>
+	<build>Build 2778</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>01.07.2007 - 16:26</release_date>
