@@ -72,7 +72,7 @@ Developer Version
 	- 1.5.5 Stable
 	- 1.5.6 Stable
 
-Building Steps: 2775
+Building Steps: 2778
 
 
 
@@ -85,7 +85,8 @@ Building Steps: 2775
 
  - security fixed: 
 
- - bug fixed: 
+ - bug fixed: The delete link for a comment in the frontend as a admin
+              doesn't delete the commment.
 
  - changed: 
 
